test/corpus/basics.txt
================================================================================
Archetype with fields
================================================================================
arche Player {
  pos: float,
  vel: float
}
--------------------------------------------------------------------------------
(source_file
  (archetype_declaration
    name: (identifier)
    (field_declaration
      name: (identifier)
      type: (type (identifier)))
    (field_declaration
      name: (identifier)
      type: (type (identifier)))))

================================================================================
Proc with let and run
================================================================================
proc main() {
  let particles = 100;
  run move;
}
--------------------------------------------------------------------------------
(source_file
  (proc_declaration
    name: (identifier)
    (let_statement
      name: (identifier)
      value: (number_literal))
    (run_statement
      system: (identifier))))

================================================================================
Alloc expression
================================================================================
proc setup() {
  let p = alloc Player(1000);
}
--------------------------------------------------------------------------------
(source_file
  (proc_declaration
    name: (identifier)
    (let_statement
      name: (identifier)
      value: (alloc_expression
        type: (identifier)
        count: (number_literal)))))

================================================================================
Sys with assignment
================================================================================
sys move(pos, vel) {
  pos = pos + vel;
}
--------------------------------------------------------------------------------
(source_file
  (sys_declaration
    name: (identifier)
    (identifier)
    (identifier)
    (assignment_statement
      target: (identifier)
      operator: (assign_op)
      value: (binary_expression
        (identifier)
        (identifier)))))

================================================================================
Func declaration
================================================================================
func double(x: Float) -> Float {
  x * 2
}
--------------------------------------------------------------------------------
(source_file
  (func_declaration
    name: (identifier)
    (parameter
      name: (identifier)
      type: (type (identifier)))
    return_type: (type (identifier))
    body: (binary_expression
      (identifier)
      (number_literal))))

================================================================================
Extern proc declaration
================================================================================
extern proc write(fd: Int, buf: char[], len: Int);
--------------------------------------------------------------------------------
(source_file
  (extern_declaration
    name: (identifier)
    (parameter
      name: (identifier)
      type: (type (identifier)))
    (parameter
      name: (identifier)
      type: (type (identifier)))
    (parameter
      name: (identifier)
      type: (type (identifier)))))

================================================================================
For loop
================================================================================
sys update(pos, vel) {
  for e in entities {
    pos = pos + vel;
  }
}
--------------------------------------------------------------------------------
(source_file
  (sys_declaration
    name: (identifier)
    (identifier)
    (identifier)
    (for_statement
      iterator: (identifier)
      iterable: (identifier)
      (assignment_statement
        target: (identifier)
        operator: (assign_op)
        value: (binary_expression
          (identifier)
          (identifier))))))

================================================================================
Field access
================================================================================
proc test() {
  let x = p.vel;
}
--------------------------------------------------------------------------------
(source_file
  (proc_declaration
    name: (identifier)
    (let_statement
      name: (identifier)
      value: (field_expression
        object: (identifier)
        field: (identifier)))))

================================================================================
Comments
================================================================================
// Comment
arche Entity {
  x: int
}
--------------------------------------------------------------------------------
(source_file
  (comment)
  (archetype_declaration
    name: (identifier)
    (field_declaration
      name: (identifier)
      type: (type (identifier)))))

================================================================================
Function call
================================================================================
proc test() {
  write(1, x);
}
--------------------------------------------------------------------------------
(source_file
  (proc_declaration
    name: (identifier)
    (expression_statement
      (call_expression
        function: (identifier)
        (number_literal)
        (identifier)))))
