test/corpus/declarations.txt
============
World declaration
============

world Game()

---

(source_file
  (world_declaration
    name: (identifier)))

============
World with fields
============

world GameWorld(players, enemies)

---

(source_file
  (world_declaration
    name: (identifier)
    (identifier)
    (identifier)))

============
Archetype declaration
============

arche Player {
  meta health: Float,
  col position: Vec3
}

---

(source_file
  (archetype_declaration
    name: (identifier)
    (field_declaration
      (identifier)
      (type)
      (optional_comma))
    (field_declaration
      (identifier)
      (type))))

============
Proc declaration
============

proc init() {
  let x = 10;
}

---

(source_file
  (proc_declaration
    name: (identifier)
    (let_statement
      name: (identifier)
      (number_literal))))

============
Func declaration
============

func add(a: Float, b: Float) -> Float {
  a + b
}

---

(source_file
  (func_declaration
    name: (identifier)
    (parameter
      name: (identifier)
      (type))
    (parameter
      name: (identifier)
      (type))
    (type)
    (binary_expression
      (identifier)
      (identifier))))

============
Extern declaration
============

extern proc write(fd: Int, buf: Str, len: Int);

---

(source_file
  (extern_declaration
    name: (identifier)
    (parameter
      name: (identifier)
      (type))
    (parameter
      name: (identifier)
      (type))
    (parameter
      name: (identifier)
      (type))))
